--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -11,6 +11,12 @@
   background-color: #E5E5E5;
 }
 
+.spin-container{
+  width: 100%;
+  height: 150px;
+  display: flex;
+}
+
 .body-container {
   width: 1010px;
   margin-left: auto;
