--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -166,7 +166,7 @@
 @media (max-width: 720px) {
 
   .body-container {
-    width: auto;
+    width: 420px;
     padding: 0;
     padding-right: 16px;
     padding-left: 16px;
